--- a/report/baseheader.tex
+++ b/report/baseheader.tex
@@ -5,6 +5,7 @@
 \usepackage{stmaryrd} %evaluation brackets
 \usepackage[pdftex]{graphicx}
 \usepackage{color}
+\usepackage{appendix}
 % \usepackage{fullpage}
 % use to make grammar
 \usepackage{array}
