--- a/report/inverse.bib
+++ b/report/inverse.bib
@@ -61,11 +61,35 @@ url="https://doi.org/10.1007/978-3-030-47361-7_9"
 }
 @article{Mogensen2018ReversibleGC,
   title={Reversible Garbage Collection for Reversible Functional Languages},
-  author={Torben {\aE}. Mogensen},
+author={Mogensen, Torben {\AE}gidius},
   journal={New Generation Computing},
   year={2018},
   volume={36},
   pages={203-232}
+}
+
+@article{patterns,
+  title={Compiling Pattern-matching for Reversible Functional Languages},
+author={Mogensen, Torben {\AE}gidius},
+  journal={Unpublished},
+  year={2018},
+}
+@inproceedings{janus,
+author = {Yokoyama, Tetsuo and Gl\"{u}ck, Robert},
+title = {A Reversible Programming Language and Its Invertible Self-Interpreter},
+year = {2007},
+isbn = {9781595936202},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1244381.1244404},
+doi = {10.1145/1244381.1244404},
+abstract = {A reversible programming language supports deterministic forward and backward computation. We formalize the programming language Janus and prove its reversibility. We provide a program inverter for the language and implement a self-interpreter that achieves deterministic forward and backward interpretation of Janus programs without using a computation history. As the self-interpreter is implemented in a reversible language, it is invertible using local program inversion. Many physical phenomena are reversible and we demonstrate the power of Janus by implementing a reversible program for discrete simulation of the Schr\"{o}dinger wave equation that can be inverted as well as run forward and backward.},
+booktitle = {Proceedings of the 2007 ACM SIGPLAN Symposium on Partial Evaluation and Semantics-Based Program Manipulation},
+pages = {144–153},
+numpages = {10},
+keywords = {non-standard interpreter hierarchy, reversible programming language, program inversion, Janus, self-interpreter, reversible computing},
+location = {Nice, France},
+series = {PEPM '07}
 }
 % IMPERATIVE PROGRAMMING
 
