report close to done

--- a/report/baseheader.tex
+++ b/report/baseheader.tex
@@ -4,6 +4,7 @@
 \usepackage{amssymb,amsmath}
 \usepackage{stmaryrd} %evaluation brackets
 \usepackage[pdftex]{graphicx}
+\usepackage[english, science, titlepage]{ku-frontpage}
 \usepackage{color}
 \usepackage{appendix}
 % \usepackage{fullpage}
@@ -30,3 +31,12 @@
 \newcommand{\llb}{\llbracket}
 \newcommand{\rrb}{\rrbracket}
 \newcommand{\empty}{\emptyset}
+\usepackage[showframe,paper=a4paper,margin=3in]{geometry}
+
+\assignment{Projekt uden for kursusregi (7.5 ECTS)}
+\author{Jacob Herbst (mwr148)}
+\title{ARL}
+\subtitle{A Reversible Programming Language}
+\date{29 01 2021}
+\advisor{Advisor: Torben Ægidius Mogensen}
+\frontpageimage{}
